--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "zone.js": "0.14.6"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "18.0.2",
+        "@angular-devkit/build-angular": "^18.2.1",
         "@angular/cli": "18.0.2",
         "@angular/compiler-cli": "18.0.1",
         "@tailwindcss/typography": "0.5.13",
