editor start with konva (failed)

--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
         "@ngneat/transloco": "6.0.4",
         "apexcharts": "3.49.1",
         "crypto-js": "4.2.0",
+        "fabric": "^6.3.0",
+        "fuse-angular": "file:",
         "highlight.js": "11.9.0",
         "jimp": "^0.22.12",
+        "konva": "^9.3.14",
         "lodash-es": "4.17.21",
         "luxon": "3.4.4",
         "ng-apexcharts": "1.10.0",
@@ -47,6 +50,7 @@
         "@tailwindcss/typography": "0.5.13",
         "@types/chroma-js": "2.4.4",
         "@types/crypto-js": "4.2.2",
+        "@types/fabric": "^5.3.8",
         "@types/highlight.js": "10.1.0",
         "@types/jasmine": "5.1.4",
         "@types/lodash": "4.17.4",
