--- a/.prettierrc
+++ b/.prettierrc
@@ -3,9 +3,12 @@
     "semi": true,
     "bracketSameLine": false,
     "trailingComma": "es5",
-    "tabWidth": 4,
+    "tabWidth": 2,
     "singleQuote": true,
     "bracketSpacing": true,
     "arrowParens": "always",
-    "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"]
+    "plugins": [
+        "prettier-plugin-organize-imports",
+        "prettier-plugin-tailwindcss"
+    ]
 }
