final docker fix

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,9 +3,9 @@ server {
     server_name localhost;
 
     location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html;  # This handles Angular routing
+        root /usr/share/nginx/html;  # Ensure this points to your Angular build output
+        index index.html index.htm;  # Default file to serve
+        try_files $uri $uri/ /index.html;  # Redirect everything else to index.html
     }
 
     error_page 404 /index.html;  # Redirect 404 errors to index.html
