--- a/angular.json
+++ b/angular.json
@@ -88,10 +88,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "smg:build:production"
+              "buildTarget": "fuse:build:production"
             },
             "development": {
-              "buildTarget": "smg:build:development"
+              "buildTarget": "fuse:build:development"
             }
           },
           "defaultConfiguration": "development"
