env modifications for test

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
-    server_name localhost;
-
+    server_name _;  # Listen on all interfaces
+	
     location / {
         root /usr/share/nginx/html;  # Ensure this points to your Angular build output
         index index.html index.htm;  # Default file to serve
