--- a/angular.json
+++ b/angular.json
@@ -68,7 +68,8 @@
                   "maximumError": "90kb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "serviceWorker": "ngsw-config.json"
             },
             "development": {
               "optimization": false,
